...
            }
            Spacer()
            VStack{
                Divider()
                HStack{
                    Section{
                        TextField("Enter your question here", text: $nameText)
                            .padding(.leading)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                    }
                    
                    Spacer()
                    let text = chatVM.processing ? "Waiting" : "Send"
                    Text(text)
                        .fontWeight(.semibold)
                        .foregroundColor(Color.white)
                        .padding(.vertical, 4.0)
                        .frame(width: 80)
                        .nonaButton()
...
